--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -47,6 +47,16 @@ p {
     @include p;
     }
 
+ul, menu, dir {
+    display: block;
+    list-style-type: none;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+    }
+
 .small,
 .footer-link {
     @include small;
