--- a/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.mustache
+++ b/public/patterns/01-molecules-footer-footer/01-molecules-footer-footer.mustache
@@ -1,29 +1,10 @@
 <div class="footer">
   <div class="footer-inside">
-    <div class="footer-logo">
-      {{> atoms-logo }}
-    </div>
-    <div class="footer-thirds">
-      <div class="footer-third first">
-        {{> atoms-footer-nav-link }} {{> atoms-footer-nav-link }}
-      </div>
-      <div class="footer-third second">
-        {{> atoms-small }} {{> atoms-paragraph-footer }}
-      </div>
-      <div class="footer-third third">
-        <div class="columns">
-          <div class="column-first">
-            <div class="footer-link"><a href="#">Donec vehicula</a></div>
-            <div class="footer-link"><a href="#">Cras ut</a></div>
-            <div class="footer-link"><a href="#">Mauris pulvinar</a></div>
-          </div>
-          <div class="column-second">
-            <div class="footer-link"><a href="#">Integer eget</a></div>
-            <div class="footer-link"><a href="#">Aliquam</a></div>
-            <div class="footer-link"><a href="#">Mlesuada</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+      <li><a href="#">Footer Link</a></li>
+    </ul>
   </div>
 </div>
