--- a/source/css/style.css
+++ b/source/css/style.css
@@ -194,7 +194,7 @@ li {
   align-items: center; }
 
 .primary-nav-inside .logo img {
-  max-width: 16px; }
+  max-width: 13px; }
 
 .primary-nav-third.first {
   display: -webkit-box;
@@ -225,7 +225,8 @@ li {
 .primary-nav-link {
   font-weight: normal;
   font-style: normal;
-  font-family: "CircularBold", sans-serif;
+  font-family: "GTAmericaRegular", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   letter-spacing: 0.25px;
@@ -235,7 +236,8 @@ li {
 .work-cycle .title {
   font-weight: normal;
   font-style: normal;
-  font-family: "CircularBold", sans-serif;
+  font-family: "GTAmericaRegular", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   letter-spacing: 0.25px;
@@ -243,79 +245,28 @@ li {
   -webkit-font-smoothing: antialiased; }
 
 .primary-nav-inside a {
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   color: #ffffff;
   display: block;
-  padding: 10px; }
+  padding: 5px 0px 3px 0px;
+  margin-left: 15px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0); }
+
+.primary-nav-inside a:hover {
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  color: #ffffff;
+  display: block;
+  padding: 5px 0px 3px 0px;
+  margin-left: 15px;
+  border-bottom: 1px solid white; }
 
 /*Footer-------------------------------
 -------------------------------------*/
-.footer-link a {
+.footer a {
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease; }
 
-.footer-link a:hover {
+.footer a:hover {
   color: #ffffff; }
-
-.footer-inside img {
-  display: block;
-  max-width: 14px; }
-
-.footer .columns {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start; }
-
-.footer .column-second {
-  padding: 0 0 0 20px; }
-
-@media screen and (max-width: 300px) {
-  .footer-logo,
-  .footer-third {
-    padding: 0 0 30px 0; } }
-
-@media screen and (max-width: 700px) and (min-width: 300px) {
-  .footer-inside {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start; }
-  .footer-logo {
-    width: 10%; }
-  .footer-thirds {
-    width: 90%;
-    padding: 0 0 0 20px; }
-  .footer-third {
-    padding: 0 0 30px 0; } }
-
-@media screen and (min-width: 701px) {
-  .footer-logo {
-    padding: 0 0 30px 0; }
-  .footer-thirds {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start; }
-  .footer-third.first {
-    width: 20%; }
-  .footer-third.second {
-    width: 50%;
-    padding: 0 30px 0 0; }
-  .footer-third.third {
-    width: 30%; }
-  .footer .columns {
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end; } }
