--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,16 +47,13 @@ body {
 
 ::selection {
   background: #fcf113;
-  /* WebKit/Blink Browsers */
   color: #282a2d; }
 
 ::-moz-selection {
   background: #fcf113;
-  /* Gecko Browsers */
   color: #282a2d; }
 
-a,
-button {
+a {
   outline: 0;
   text-decoration: none;
   color: #d3d0cd; }
@@ -86,38 +83,6 @@ h2 {
   line-height: 30px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased; }
-
-button {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline-block;
-  margin-bottom: 0;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: none;
-  border: 1px solid #d3d0cd;
-  border-radius: 0px;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: #d3d0cd;
-  font-weight: normal;
-  font-style: normal;
-  font-family: "CircularBold", sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 0.75px;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  padding: 7px 14px; }
 
 p {
   font-weight: normal;
@@ -152,8 +117,20 @@ li {
   letter-spacing: 0px;
   margin: 0; }
 
-.small,
-.footer-link {
+.block-support {
+  font-weight: normal;
+  font-style: normal;
+  font-family: "GTAmericaRegular", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: 0px;
+  margin: 0;
+  color: #9e9e9e; }
+
+.small {
   font-weight: normal;
   font-style: normal;
   font-family: "CircularBold", sans-serif;
@@ -194,7 +171,7 @@ li {
   align-items: center; }
 
 .primary-nav-inside .logo img {
-  max-width: 13px; }
+  max-width: 18px; }
 
 .primary-nav-third.first {
   display: -webkit-box;
