--- a/source/css/style.css
+++ b/source/css/style.css
@@ -114,10 +114,12 @@ a.link-inline:focus {
 
 /* Link Support */
 a.link-support {
-  font-family: "CircularBold", sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 0.75px;
+  font-family: "GTAmericaRegular", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 0px;
+  margin: 0;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-weight: normal;
