--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,14 @@
 html {
   font-size: 100%; }
 
+@media (min-width: 1300px) {
+  html {
+    font-size: 120%; } }
+
+@media (min-width: 1600px) {
+  html {
+    font-size: 140%; } }
+
 /*Flexbox------------------------------
 -------------------------------------*/
 /*Resets-------------------------------
@@ -37,8 +45,8 @@ dl, dd, ol, ul, figure {
 body {
   font-family: "GTAmericaRegular", sans-serif;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
+  font-size: 1rem;
+  line-height: 1.375rem;
   letter-spacing: 0px;
   margin: 0;
   -moz-osx-font-smoothing: grayscale;
@@ -50,9 +58,9 @@ body {
 
 h1 {
   font-family: "Butler", serif;
-  font-size: 40px;
-  line-height: 40px;
-  padding-bottom: 15px;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  padding-bottom: 0.9375rem;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-weight: normal;
@@ -61,8 +69,8 @@ h1 {
 
 h2 {
   font-family: "Butler", serif;
-  font-size: 30px;
-  line-height: 30px;
+  font-size: 1.875rem;
+  line-height: 1.875rem;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-weight: normal;
@@ -92,15 +100,16 @@ a {
 
 /* Link Header */
 a.link-header {
-  padding: 5px 0px 3px 0px;
-  margin-left: 13px;
+  padding: 1px 0px 0px 0px;
+  margin-left: 18px;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
   border-bottom: 1px solid rgba(255, 255, 255, 0); }
 
 a.link-header:hover,
 a.link-header:active,
-a.link-header:focus {
+a.link-header:focus,
+a.link-header.active {
   border-bottom: 1px solid white; }
 
 /* Link Inline */
@@ -116,8 +125,8 @@ a.link-inline:focus {
 a.link-support {
   font-family: "GTAmericaRegular", sans-serif;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
+  font-size: 1rem;
+  line-height: 1.375rem;
   letter-spacing: 0px;
   margin: 0;
   -moz-osx-font-smoothing: grayscale;
@@ -171,7 +180,6 @@ a.link-footer:active,
 a.link-footer:focus {
   color: #ffffff; }
 
-/* Link Image */
 /*Images-------------------------------
 -------------------------------------*/
 img {
@@ -203,9 +211,10 @@ img {
   -ms-flex-align: center;
   align-items: center;
   height: 60px;
-  background-color: #282a2d; }
+  background-color: #1a1a1a; }
 
-.primary-nav-half {
+.primary-nav-half,
+.primary-nav .logo-icon {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -228,6 +237,24 @@ img {
 .primary-nav .logo img {
   max-width: 15px; }
 
+.logo span.name,
+.logo span.title {
+  display: none; }
+
+@media (min-width: 350px) {
+  .logo .logo-icon,
+  .logo span.title {
+    display: none; }
+  .logo span.name {
+    display: block; } }
+
+@media (min-width: 550px) {
+  .logo .logo-icon {
+    display: none; }
+  .logo span.name,
+  .logo span.title {
+    display: inline-block; } }
+
 /*Footer-------------------------------
 -------------------------------------*/
 .footer {
@@ -236,4 +263,46 @@ img {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   background-color: #1a1a1a; }
+
+.footer-right {
+  padding: 50px 0px 0px 0px; }
+
+.footer dl {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.footer dt,
+.footer dd {
+  padding: 5px 10px; }
+
+.footer dt {
+  width: 100%;
+  font-family: "CircularBold", sans-serif;
+  font-size: 0.6875rem;
+  line-height: 0.6875rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-weight: normal;
+  font-style: normal;
+  color: #d3d0cd;
+  padding-bottom: 10px; }
+
+@media (min-width: 540px) {
+  .footer {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap; }
+  .footer-right {
+    padding: 0px 0px 0px 100px; } }
