--- a/source/_patterns/01-molecules/footer/footer.mustache
+++ b/source/_patterns/01-molecules/footer/footer.mustache
@@ -1,8 +1,21 @@
 <div class="footer">
-      <ul>
-        <li>{{> atoms-link-footer }}</li>
-        <li>{{> atoms-link-footer }}</li>
-        <li>{{> atoms-link-footer }}</li>
-        <li>{{> atoms-link-footer }}</li>
-      </ul>
+  <div class="footer-left">
+      <dl>
+        <dt>Connect</dt>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+        <dd>{{> atoms-link-footer }}</dd>
+      </dl>
+  </div>
+  <div class="footer-right">
+    <dl>
+      <dt>Email</dt>
+      <dd>{{> atoms-link-footer }}</dd>
+    </dl>
+  </div>
 </div>
